# anything-to-everything

./: .dockerignore  .gitignore  CHARACTER_MODE_GUIDE.md  DOCKER.md  Dockerfile  FEATURES.md  FEATURES_TODO.md  FEATURE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  MIGRATION_PROGRESS.md  OLLAMA_ARTIFACTS.md  OLLAMA_CHARACTER_DETECTION.md  OLLAMA_QUICK_REFERENCE.md  OLLAMA_SEGMENTED_IMPLEMENTATION.md  PHASE_2_COMPLETE.md  PHASE_2_DATABASE.md  PHASE_3_COMPLETE.md  PLUGIN_SYSTEM_PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  __init__.py  audio_merger.py  character_analyzer.py  character_review_tool.py  character_segmenter.py  character_voice_config.py  config_template.py  convert_epub.bat  docker-compose.registry.yml  docker-compose.yml  epub_extractor.py  example.ps1  example.sh  job_processor.py  main.py  ollama_processor.py  pyproject.toml  (+7 more)
src/: character_analyzer.py  character_segmenter.py  character_voice_config.py  config_template.py  epub_extractor.py  job_executor.py  job_processor.py  job_state.py  main.py  ollama_processor.py  processing_steps.py  step_registry.py  text_extractor.py  text_segmenter.py  tts_processor.py  webui.py
tauri-app/: .gitignore  PHASE_2_COMPLETE.md  PHASE_3_HOST_FUNCTIONS.md  RUST_EXTISM_SUMMARY.md  package-lock.json  package.json  pnpm-lock.yaml
tauri-app/src/: App.tsx  index.css  main.tsx  router.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/plugins/: audit-plugin.json  audit-plugin.wasm  auth-plugin.json  auth-plugin.wasm
tauri-app/src-tauri/plugins/template/: plugin.json  plugin.wasm
tauri-app/src-tauri/src/: commands.rs  lib.rs  main.rs  tick_manager.rs
tauri-app/src-tauri/src/db/: migrations.rs  mod.rs  operations.rs  schema.rs
tauri-app/src-tauri/src/host_functions/: database.rs  mod.rs  test_api.rs
tauri-app/src-tauri/src/plugins/: loader.rs  manager.rs  manifest.rs  mod.rs
tauri-app/src-tauri/tests/: host_functions_integration.rs
tauri-app/src/api/: audit.ts  auth.ts  plugins.ts  types.ts
tauri-app/src/components/: RequireAuth.tsx  RequireGuest.tsx
tauri-app/src/contexts/: AuthContext.tsx
tauri-app/src/hooks/: usePlugins.ts
tauri-app/src/pages/: AuditLogs.tsx  Dashboard.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  NotFound.tsx  Register.tsx  TickManager.tsx  VerifyEmail.tsx
tauri-app/src/types/: plugin.ts
wasm-plugins/: README.md
wasm-plugins/audit-plugin/: Cargo.toml  build.ps1
wasm-plugins/audit-plugin/src/: lib.rs
wasm-plugins/auth-plugin/: Cargo.toml  README.md  build.ps1  deploy.ps1  test-auth.ps1
wasm-plugins/auth-plugin/src/: lib.rs
wasm-plugins/template/: .gitignore  Cargo.toml  README.md  build.ps1
wasm-plugins/template/src/: lib.rs
