[project]
name = "epub-to-audiobook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "gradio>=4.0.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "indextts",
]

[project.optional-dependencies]
deepspeed = [
    "indextts[deepspeed]",
]

[tool.uv.workspace]
members = [
    "lib/index-tts",
]

[tool.uv.sources]
indextts = { workspace = true }
