[package]
name = "auth-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Authentication plugin using database host functions"

[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
