[package]
name = "plugin-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Template for Extism-compatible WASM plugins"

[dependencies]
extism-pdk = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
strip = true        # Strip symbols
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size
